# LaboThapPy_gregoire

./: .gitignore  README.md  cycle_combine_coolprop.csv  pyproject.toml  results_brayton_rankine.csv
LaboThapPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
labothappy/component/: base_component.py
labothappy/component/compressor/: compressor_csteff.py
labothappy/component/examples/compressor/: compressor_csteff_example.py
labothappy/component/examples/expander/: expander_csteff_example.py
labothappy/component/examples/heat_exchanger/: hex_csteff_example.py
labothappy/component/examples/tank/: tank_LV_separator_example.py  tank_mixer_example.py  tank_spliter_example.py
labothappy/component/examples/valve/: valve_isenthalpic_example.py
labothappy/component/expander/: expander_csteff.py
labothappy/component/heat_exchanger/: hex_csteff.py  hex_csteff_disc.py  hex_cstpinch.py
labothappy/connector/: solar_salt_connector.py
labothappy/machine/: base_circuit.py  circuit_rec.py
labothappy/machine/examples/CO2_Heat_Pumps/: CO2_HeatPump_circuit.py  HeatPump_example.py
labothappy/machine/examples/CO2_Transcritical_Circuits/: CO2_Transcritical_circuit.py
labothappy/machine/examples/ORC/: DECAGONE_ORC.py
labothappy/machine/examples/Plan de travail Greg/: FAIL_superheat.py  TGV.py  air_Brayton.py  air_and_steam_cycles.py  cc_sh.py  combined_cycles.py  oil_and_steam.py  sCO2.py  steam_Rankine.py
labothappy/machine/examples/Plan de travail Greg/Air/: air_Brayton.py  plot_eta_PR.py  plot_eta_temp.py
labothappy/sizing/heat_exchanger/: PHX_CD_ORC.py
(+72 files in other folders)
